# pathologyandprotein

./: README.md  pyproject.toml  requirements.txt
1. Pre-Course Training/Introduction to Numpy/: advanced_numpy.py  creating_numpy_arrays.py  np_create.py
1. Pre-Course Training/a. Introduction to Python/: CSE 416 Pset1 Functions.py  CSE 416 Pset1 Loops.py  CSE 416 Pset1 Vars.py  CSE 416 STAT 416 classes.py  CSE312 Pset1 Lists.py
1. Pre-Course Training/c. Introduction to Numpy/: creating_numpy_arrays.py  review.py  temperature_data.csv
Module 0/Homework 0/: hw1_scaffold edit.ipynb  hw1_scaffold.ipynb
Module 0/Lecture 0/: ModelComplexity.ipynb
Module 0/Lecture 0, 1/: ModelComplexity.ipynb  ModelDemo.ipynb
Module 0/Section 0/: Oscar_Liu_CSE416_Section0_Su24.pptx  pandas-introduction.ipynb
Module 1/Homework 1/: .hw2_scaffold.ipynb.swp  hw1_scaffold.ipynb
Module 1/Lecture 2, 3/: Lec4.ipynb  OverfittingAndRidge.ipynb
Module 1/Lecture 3/: Lec4.ipynb
Module 1/Section 1/: Philadelphia_Crime_Rate_noNA.csv  Section1.pptx  pandas-introduction 2.ipynb  pandas-introduction.ipynb
Module 2/Homework 2/: food_products.csv  hw2_scaffold.ipynb
Module 2/Lecture 4, 5/: Lec6.ipynb
Module 2/Section 2/: Section 3 - Classification with Logistic Regression.ipynb  Section2.pptx
Module 3/: Midterm Review Section.pptx
Module 4/Homework 3/: A3_Loan_Safety_with_Decision_Trees.ipynb
Module 4/Section 3/: section5-trees.ipynb
Module 4/Section 4/: Section4.pptx  section5-trees.ipynb
Module 5/Homework 4/: Copy of HW4 Deep Learning  (+2 more)
Module 8/: cheat_sheet.tex
(+16 files in other folders)
